# 4chan-local

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP-local-tool.md
fourchan_local/: __init__.py  app.py  cli.py  db.py  fourchan.py  htmlstrip.py  media.py  poller.py  retention.py  schema.sqlite.sql
fourchan_local/static/: app.js  style.css
fourchan_local/templates/: _boardhead.html  _post.html  base.html  board.html  catalog.html  index.html  pins.html  search.html  thread.html
